<?xml version="1.0"?>
<package format="2">
  <name>kdl_acc_solver</name>
  <version>0.0.0</version>
  <description>The kdl_acc_solver package</description>

  <maintainer email="algh@kth.se">algh</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>urdf</exec_depend>


  
  <export>

  </export>
</package>
