<?xml version="1.0"?>
<package format="2">
  <name>kdl_wrapper</name>
  <version>0.1.0</version>
  <description>The kdl_wrapper package</description>

  <maintainer email="algh@todo.todo">algh</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kdl_acc_solver</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>kdl_acc_solver</build_export_depend>
  <build_export_depend>kdl_parser</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>kdl_acc_solver</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>

  </export>
</package>
